ros1 client package somehow also needs to link with cyclonedds?

--- a/free_fleet_client_ros1/CMakeLists.txt
+++ b/free_fleet_client_ros1/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 find_package(free_fleet REQUIRED)
+find_package(CycloneDDS REQUIRED)
 
 catkin_package()
 
