--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -2,15 +2,27 @@ cmake_minimum_required(VERSION 3.5.0)
 project(free_fleet VERSION 0.0.1 LANGUAGES CXX)
 
 # Default to C++14
-# if(NOT CMAKE_CXX_STANDARD)
-#   set(CMAKE_CXX_STANDARD 14)
-# endif()
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-# if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-#   add_compile_options(-Wall -Wextra -Wpedantic)
-# endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
 include(GNUInstallDirs)
+
+
+
+# -----------------------------------------------------------------------------
+
+# find_package(cyclonedds_cmake_module QUIET CONFIG)
+find_package(CycloneDDS QUIET CONFIG)
+if (NOT CycloneDDS_FOUND)
+  message(WARNING "Could not find Eclipse Cyclone DDS - skipping '${PROJECT_NAME}'")
+  return()
+endif()
+# find_package(CycloneDDS REQUIRED)
 
 # -----------------------------------------------------------------------------
 
@@ -21,6 +33,27 @@ add_library(free_fleet_client STATIC
   src/messages/message_utils.cpp
   src/dds_utils/common.cpp
 )
+target_include_directories(free_fleet_client
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+target_link_libraries(free_fleet_client
+  CycloneDDS::ddsc
+  ssl
+  crypto
+  ${CycloneDDS_LIBRARIES}
+)
+
+# install(
+#   TARGETS free_fleet_client
+#   EXPORT free_fleet_client
+#   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+#   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+# )
+
+# -----------------------------------------------------------------------------
 
 # add_library(free_fleet_server
 #   src/Server.cpp
@@ -28,53 +61,6 @@ add_library(free_fleet_client STATIC
 #   src/messages/FreeFleet.c
 #   src/dds_utils/common.cpp
 # )
-
-# -----------------------------------------------------------------------------
-# Builing for ROS 2 systems
-
-find_package(cyclonedds_cmake_module QUIET CONFIG)
-find_package(CycloneDDS QUIET CONFIG)
-
-if (cyclonedds_cmake_module_FOUND AND CycloneDDS_FOUND)
-  # TODO ROS2 builds
-  # target_link_libraries(free_fleet_server
-  #   CycloneDDS::ddsc
-  # )
-  return()
-endif()
-
-# -----------------------------------------------------------------------------
-# Building for ROS 1 systems
-
-# Getting CycloneDDS as an external project for ROS 1
-include(ExternalProject)
-set(CYCLONE_SOURCE_PATH "${CMAKE_CURRENT_BINARY_DIR}/../CycloneDDS")
-set(CYCLONE_INSTALL_PATH ${CMAKE_INSTALL_PREFIX})
-ExternalProject_Add(cyclonedds
-  SOURCE_DIR ${CYCLONE_SOURCE_PATH}
-  GIT_REPOSITORY https://github.com/eclipse-cyclonedds/cyclonedds.git
-  CMAKE_ARGS 
-    -DCMAKE_INSTALL_PREFIX=${CYCLONE_INSTALL_PATH} 
-    -DBUILD_IDLC=NO 
-    -DBUILD_SHARED_LIBS=FALSE
-)
-
-find_package(CycloneDDS REQUIRED)
-
-add_dependencies(free_fleet_client cyclonedds)
-target_include_directories(free_fleet_client
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CYCLONE_INSTALL_PATH}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
-target_link_libraries(free_fleet_client
-  # ${CYCLONE_INSTALL_PATH}/lib/libddsc.a
-  CycloneDDS::ddsc
-  ssl
-  crypto
-)
-
 # add_dependencies(free_fleet_server cyclonedds)
 # target_include_directories(free_fleet_server
 #   PUBLIC
@@ -94,7 +80,7 @@ target_link_libraries(free_fleet_client
 # )
 # install(
 #   TARGETS ${PACKAGE_LIBRARIES}
-#   EXPORT free_fleet-targets 
+#   EXPORT free_fleet-targets
 #   DESTINATION lib
 # )
 # install(
@@ -102,7 +88,7 @@ target_link_libraries(free_fleet_client
 #   DESTINATION lib/cmake/free_fleet
 # )
 
-# # # Mark cpp header files for installation
+# # Mark cpp header files for installation
 # install(
 #   DIRECTORY include/free_fleet
 #   DESTINATION include
@@ -134,7 +120,6 @@ target_link_libraries(free_fleet_client
 #     ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-config-version.cmake
 #   DESTINATION lib/cmake/free_fleet
 # )
-
 # export(
 #   EXPORT free_fleet-targets
 #   FILE ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-targets.cmake
