--- a/free_fleet/package.xml
+++ b/free_fleet/package.xml
@@ -11,6 +11,7 @@
 
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
   <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+  <depend>cyclonedds</depend>
   <export>
     <build_type>cmake</build_type>
   </export>
