still trying to figure out why the link is needed

--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -36,7 +36,8 @@ target_include_directories(free_fleet_client
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 target_link_libraries(free_fleet_client
-  PRIVATE
+  # PRIVATE
+  PUBLIC
     CycloneDDS::ddsc
     ssl
     crypto
