all because of linker language missed out of a C and CXX

--- a/free_fleet_client_ros1/CMakeLists.txt
+++ b/free_fleet_client_ros1/CMakeLists.txt
@@ -4,7 +4,7 @@ if (NOT $ENV{ROS_VERSION} MATCHES "1")
   return()
 endif()
 
-project(free_fleet_client_ros1 LANGUAGES CXX)
+project(free_fleet_client_ros1 LANGUAGES C CXX)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
