launching map server, just worked out the lifecycle_bringup thingy, map_server doesn't seem to be transient local too

--- a/free_fleet_panel_ros2/CMakeLists.txt
+++ b/free_fleet_panel_ros2/CMakeLists.txt
@@ -67,6 +67,14 @@ ament_export_dependencies(
   Qt5Widgets
 )
 
+# -----------------------------------------------------------------------------
+
+install(
+  DIRECTORY
+    launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
 install(
   TARGETS ${PROJECT_NAME}
   EXPORT ${PROJECT_NAME}
