--- a/free_fleet_panel_ros2/package.xml
+++ b/free_fleet_panel_ros2/package.xml
@@ -17,6 +17,7 @@
   <depend>geometry_msgs</depend>
   <depend>tf2</depend>
   <exec_depend>nav2_map_server</exec_depend>
+  <exec_depend>nav2_lifecycle_manager</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
 
