--- a/free_fleet_server_ros2/launch/turtlebot3_world_ff.yaml
+++ b/free_fleet_server_ros2/launch/turtlebot3_world_ff.yaml
@@ -8,7 +8,7 @@ free_fleet_server_ros2_node:
     fleet_state_topic: "fleet_states"
     mode_request_topic: "robot_mode_requests"
     path_request_topic: "robot_path_requests"
-    destination_request_topic: "destination_requests"
+    destination_request_topic: "robot_destination_requests"
 
     # DDS domain and topics
     dds_domain: 42
