--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,31 +9,37 @@ jobs:
     steps:
     - name: deps
       run: |
-        sudo apt update
-        sudo apt install python-catkin-tools ros-melodic-move-base-msgs -y
-        sudo apt install ros-melodic-tf2 ros-melodic-tf2-ros ros-melodic-tf2-geometry-msgs -y
-        sudo apt install ros-melodic-actionlib ros-melodic-sensor-msgs -y
-        mkdir -p /home/repos
-        cd /home/repos/
-        git clone https://github.com/osrf/free_fleet
-        git clone https://github.com/eclipse-cyclonedds/cyclonedds
+        sudo apt update && sudo apt install \
+          git cmake wget \
+          python3-vcstool \
+          python-catkin-tools \
+          libyaml-cpp-dev -y
+        sudo apt install \
+          ros-melodic-move-base-msgs \
+          ros-melodic-tf2 \
+          ros-melodic-tf2-ros \
+          ros-melodic-tf2-geometry-msgs \
+          ros-melodic-actionlib \
+          ros-melodic-sensor-msgs -y
+    - name: workspace
+      shell: bash
+      run: |
+        mkdir -p /home/ros1_ws/src
+        cd /home/ros1_ws
+        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/free_fleet_ros1.repos
+        vcs import src < free_fleet_ros1.repos
     - name: checkout
       shell: bash
       run: |
-        cd /home/repos/free_fleet
+        cd /home/ros1_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
-    - name: workspace
-      run: |
-        mkdir -p /home/ff_ws/src
-        cd /home/ff_ws/src
-        ln -s /home/repos/free_fleet free_fleet
-        ln -s /home/repos/cyclonedds cyclonedds
     - name: build
       shell: bash
       run: |
-        cd /home/ff_ws
+        cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        catkin build free_fleet_client_ros1 --cmake-args -DBUILD_IDLC=NO
+        catkin build cyclonedds --cmake-args -DBUILD_IDLC=NO
+        catkin build
 
   ros2:
     runs-on: ubuntu-18.04
@@ -42,30 +48,27 @@ jobs:
     steps:
     - name: deps
       run: |
-        sudo apt update
-        sudo apt install ros-eloquent-rmw-cyclonedds-cpp -y
-        cd /home/
-        mkdir repos
-        cd repos/
-        git clone https://github.com/osrf/free_fleet
-        git clone https://github.com/eclipse-cyclonedds/cyclonedds
-        git clone https://github.com/osrf/rmf_core
+        sudo apt update && sudo apt install \
+          git cmake wget \
+          python3-vcstool \
+          python-catkin-tools \
+          libyaml-cpp-dev -y
+    - name: workspace
+      shell: bash
+      run: |
+        mkdir -p /home/ros2_ws/src
+        cd /home/ros2_ws
+        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/free_fleet_ros2.repos
+        vcs import src < free_fleet_ros2.repos
     - name: checkout
       shell: bash
       run: |
-        cd /home/repos/free_fleet 
+        cd /home/ros2_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
-    - name: workspace
-      run: |
-        cd /home/
-        mkdir -p ff_ws/src
-        cd ff_ws/src
-        ln -s /home/repos/free_fleet free_fleet
-        ln -s /home/repos/cyclonedds cyclonedds
-        ln -s /home/repos/rmf_core rmf_core
     - name: build
       shell: bash
       run: |
-        cd /home/ff_ws
+        cd /home/ros2_ws
         source /opt/ros/eloquent/setup.bash
-        colcon build --packages-up-to free_fleet_server_ros2 --cmake-args -DBUILD_IDLC=NO
+        colcon build --packages-select cyclonedds --cmake-args -DBUILD_IDLC=NO
+        colcon build
