--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,17 +10,9 @@ jobs:
     - name: deps
       run: |
         sudo apt update && sudo apt install \
-          git cmake wget \
-          python3-vcstool \
-          python-catkin-tools \
-          libyaml-cpp-dev -y
-        sudo apt install \
-          ros-melodic-move-base-msgs \
-          ros-melodic-tf2 \
-          ros-melodic-tf2-ros \
-          ros-melodic-tf2-geometry-msgs \
-          ros-melodic-actionlib \
-          ros-melodic-sensor-msgs -y
+          git wget python3-vcstool \
+          python3-colcon-common-extensions \
+          python3-colcon-mixin -y
     - name: workspace
       shell: bash
       run: |
@@ -33,13 +25,18 @@ jobs:
       run: |
         cd /home/ros1_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
+    - name: rosdeps
+      shell: bash
+      run: |
+        cd /home/ros1_ws
+        rosdep update
+        rosdep install --from-paths src --ignore-src -y -r --skip-keys="rmf_fleet_msgs ament_lint_common rclpy rclcpp rosidl_default_generators ament_cmake builtin_interfaces"
     - name: build
       shell: bash
       run: |
         cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        catkin build cyclonedds --cmake-args -DBUILD_IDLC=NO
-        catkin build
+        colcon build --mixin-files src/free_fleet/mixins/ros1/skip.mixin --mixin skip
 
   ros2:
     runs-on: ubuntu-18.04
