--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,8 +47,8 @@ jobs:
       run: |
         sudo apt update && sudo apt install \
           git wget python3-vcstool \
-          python-colcon-common-extensions \
-          python-colcon-mixin -y
+          python3-colcon-common-extensions \
+          python3-colcon-mixin -y
     - name: workspace
       shell: bash
       run: |
