--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,8 @@ jobs:
       run: |
         cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        colcon build --mixin-files src/free_fleet/mixins/ros1/skip.mixin --mixin skip
+        catkin config --blacklist free_fleet_server_ros2
+        catkin build
 
   ros2:
     runs-on: ubuntu-18.04
@@ -72,4 +73,4 @@ jobs:
       run: |
         cd /home/ros2_ws
         source /opt/ros/eloquent/setup.bash
-        colcon build --mixin-files src/free_fleet/mixins/ros2/skip.mixin --mixin skip
+        colcon build
