--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,7 @@ jobs:
       run: |
         sudo apt update && sudo apt install \
           git wget python3-vcstool \
+          python-catkin-tools \
           python3-colcon-common-extensions \
           python3-colcon-mixin -y
     - name: workspace
@@ -48,6 +49,7 @@ jobs:
       run: |
         sudo apt update && sudo apt install \
           git wget python3-vcstool \
+          python-catkin-tools \
           python3-colcon-common-extensions \
           python3-colcon-mixin -y
     - name: workspace
