--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,11 @@ jobs:
     - name: deps
       run: |
         sudo apt update && sudo apt install \
-          git wget python3-vcstool \
-          python-catkin-tools \
+          git wget \
+          python3-vcstool \
           python3-colcon-common-extensions \
-          python3-colcon-mixin -y
+          python3-colcon-mixin \
+          maven default-jdk -y
     - name: workspace
       shell: bash
       run: |
@@ -37,7 +38,7 @@ jobs:
       run: |
         cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        catkin config --blacklist free_fleet_server_ros2
+        catkin config --blacklist free_fleet_server_ros2 free_fleet_examples_ros2
         catkin build
 
   ros2:
@@ -48,10 +49,11 @@ jobs:
     - name: deps
       run: |
         sudo apt update && sudo apt install \
-          git wget python3-vcstool \
-          python-catkin-tools \
+          git wget \
+          python3-vcstool \
           python3-colcon-common-extensions \
-          python3-colcon-mixin -y
+          python3-colcon-mixin \
+          maven default-jdk -y
     - name: workspace
       shell: bash
       run: |
