--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,6 @@ jobs:
           python-catkin-tools \
           python3-vcstool \
           python3-colcon-common-extensions \
-          python3-colcon-mixin \
           maven default-jdk -y
     - name: workspace
       shell: bash
@@ -34,13 +33,13 @@ jobs:
       run: |
         cd /home/ros1_ws
         rosdep update
+        source /opt/ros/melodic/setup.bash
         rosdep install --from-paths src --ignore-src -y -r --skip-keys="rmf_fleet_msgs ament_lint_common rclpy rclcpp rosidl_default_generators ament_cmake builtin_interfaces"
     - name: build
       shell: bash
       run: |
         cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        catkin config --blacklist free_fleet_server_ros2 free_fleet_examples_ros2
         catkin build
 
   ros2:
@@ -56,7 +55,6 @@ jobs:
           python-catkin-tools \
           python3-vcstool \
           python3-colcon-common-extensions \
-          python3-colcon-mixin \
           maven default-jdk -y
     - name: workspace
       shell: bash
@@ -75,7 +73,8 @@ jobs:
       run: |
         cd /home/ros2_ws
         rosdep update
-        rosdep install --from-paths src --ignore-src -y -r --skip-keys="actionlib tf roscpp rviz catkin map_server turtlebot3_navigation turtlebot3_bringup turtlebot3_gazebo"
+        source /opt/ros/eloquent/setup.bash
+        rosdep install --from-paths src --ignore-src -y -r --skip-keys="actionlib tf roscpp rviz catkin map_server turtlebot3_navigation turtlebot3_bringup turtlebot3_gazebo move_base amcl"
     - name: build
       shell: bash
       run: |
