--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,35 +10,36 @@ jobs:
     - name: deps
       run: |
         sudo apt update && sudo apt install \
-          git cmake wget \
-          python3-vcstool \
+          git wget \
+          python-rosdep \
           python-catkin-tools \
-          libyaml-cpp-dev -y
-        sudo apt install \
-          ros-melodic-move-base-msgs \
-          ros-melodic-tf2 \
-          ros-melodic-tf2-ros \
-          ros-melodic-tf2-geometry-msgs \
-          ros-melodic-actionlib \
-          ros-melodic-sensor-msgs -y
+          python3-vcstool \
+          python3-colcon-common-extensions \
+          maven default-jdk -y
     - name: workspace
       shell: bash
       run: |
         mkdir -p /home/ros1_ws/src
         cd /home/ros1_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/free_fleet_ros1.repos
-        vcs import src < free_fleet_ros1.repos
+        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros1.repos
+        vcs import src < ros1.repos
     - name: checkout
       shell: bash
       run: |
         cd /home/ros1_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
+    - name: rosdeps
+      shell: bash
+      run: |
+        cd /home/ros1_ws
+        rosdep update
+        source /opt/ros/melodic/setup.bash
+        rosdep install --from-paths src --ignore-src -y -r --skip-keys="rmf_fleet_msgs ament_lint_common rclpy rclcpp rosidl_default_generators ament_cmake builtin_interfaces"
     - name: build
       shell: bash
       run: |
         cd /home/ros1_ws
         source /opt/ros/melodic/setup.bash
-        catkin build cyclonedds --cmake-args -DBUILD_IDLC=NO
         catkin build
 
   ros2:
@@ -49,27 +50,34 @@ jobs:
     - name: deps
       run: |
         sudo apt update && sudo apt install \
-          git cmake wget \
+          git wget \
+          python-rosdep \
+          python-catkin-tools \
           python3-vcstool \
-          libyaml-cpp-dev -y
-        sudo apt install ros-eloquent-launch* -y
+          python3-colcon-common-extensions \
+          maven default-jdk -y
     - name: workspace
       shell: bash
       run: |
         mkdir -p /home/ros2_ws/src
         cd /home/ros2_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/free_fleet_ros2.repos
-        vcs import src < free_fleet_ros2.repos
+        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros2.repos
+        vcs import src < ros2.repos
     - name: checkout
       shell: bash
       run: |
         cd /home/ros2_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
+    - name: rosdeps
+      shell: bash
+      run: |
+        cd /home/ros2_ws
+        rosdep update
+        source /opt/ros/eloquent/setup.bash
+        rosdep install --from-paths src --ignore-src -y -r --skip-keys="actionlib tf roscpp rviz catkin map_server turtlebot3_navigation turtlebot3_bringup turtlebot3_gazebo move_base amcl"
     - name: build
       shell: bash
       run: |
         cd /home/ros2_ws
         source /opt/ros/eloquent/setup.bash
-        colcon build --packages-select cyclonedds --cmake-args -DBUILD_IDLC=NO
-        colcon build --packages-up-to free_fleet_server_ros2 free_fleet_examples_ros2
-
+        colcon build
