--- a/free_fleet_examples_ros1/CMakeLists.txt
+++ b/free_fleet_examples_ros1/CMakeLists.txt
@@ -1,25 +1,26 @@
 cmake_minimum_required(VERSION 3.5.0)
 
-if (NOT $ENV{ROS_VERSION} MATCHES "1")
-  return()
-endif()
-
 project(free_fleet_examples_ros1)
 
 # -----------------------------------------------------------------------------
 
-find_package(catkin REQUIRED)
+find_package(catkin QUIET)
 
-catkin_package()
+if (catkin_FOUND)
 
-# -----------------------------------------------------------------------------
+  catkin_package()
 
-install(
-  DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME}
-)
+  install(
+    DIRECTORY launch
+    DESTINATION share/${PROJECT_NAME}
+  )
 
-install(
-  DIRECTORY test_maps
-  DESTINATION share/${PROJECT_NAME}
-)
+  install(
+    DIRECTORY test_maps
+    DESTINATION share/${PROJECT_NAME}
+  )
+
+else()
+  message("catkin not found so skipping this ROS1 package")
+endif()
+
