added cleaned up rviz config for multi turtlebot3 example

--- a/free_fleet_examples_ros1/CMakeLists.txt
+++ b/free_fleet_examples_ros1/CMakeLists.txt
@@ -11,6 +11,11 @@ if (catkin_FOUND)
   catkin_package()
 
   install(
+    DIRECTORY rviz
+    DESTINATION share/${PROJECT_NAME}
+  )
+
+  install(
     DIRECTORY launch
     DESTINATION share/${PROJECT_NAME}
   )
