nav goal updating internal pose state, WIP send through dds

--- a/ff_rviz_plugins_ros1/CMakeLists.txt
+++ b/ff_rviz_plugins_ros1/CMakeLists.txt
@@ -11,6 +11,8 @@ set(QT_LIBRARIES Qt5::Widgets)
 set(QT_VERSION ${Qt5Widgets_VERSION})
 
 find_package(catkin QUIET COMPONENTS
+  roscpp
+  geometry_msgs
   pluginlib
   rviz
 )
