--- a/ff_rviz_plugins_ros1/package.xml
+++ b/ff_rviz_plugins_ros1/package.xml
@@ -9,9 +9,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>free_fleet_client_ros1</exec_depend>
   <depend>pluginlib</depend>
   <depend>rviz</depend>
+  <depend>roscpp</depend>
+  <depend>geometry_msgs</depend>
+
+  <depend>free_fleet</depend>
 
   <export>
       <rviz plugin="${prefix}/plugin_description.xml"/>
