--- a/ff_examples_ros2/CMakeLists.txt
+++ b/ff_examples_ros2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5.0)
 
-project(free_fleet_examples_ros2)
+project(ff_examples_ros2)
 
 find_package(ament_cmake QUIET)
 
@@ -24,5 +24,3 @@ if (ament_cmake_FOUND)
 else()
   message("ament_cmake not found so skipping this ROS2 package")
 endif()
-
-# -----------------------------------------------------------------------------
