--- a/ff_examples_ros2/package.xml
+++ b/ff_examples_ros2/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>free_fleet_examples_ros2</name>
+  <name>ff_examples_ros2</name>
   <version>0.0.1</version>
   <description>A package containing some examples of using free fleet ROS 2 components</description>
   <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
