--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,47 +2,7 @@ name: build
 on: push
 jobs:
 
-  ros1:
-    runs-on: ubuntu-18.04
-    container:
-      image: docker://ros:melodic-ros-base-bionic
-    steps:
-    - name: deps
-      run: |
-        sudo apt update && sudo apt install \
-          git wget \
-          python-rosdep \
-          python-catkin-tools \
-          python3-vcstool \
-          python3-colcon-common-extensions \
-          maven default-jdk -y
-    - name: workspace
-      shell: bash
-      run: |
-        mkdir -p /home/ros1_ws/src
-        cd /home/ros1_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros1.repos
-        vcs import src < ros1.repos
-    - name: checkout
-      shell: bash
-      run: |
-        cd /home/ros1_ws/src/free_fleet
-        git checkout "${GITHUB_REF:11}"
-    - name: rosdeps
-      shell: bash
-      run: |
-        cd /home/ros1_ws
-        rosdep update
-        source /opt/ros/melodic/setup.bash
-        rosdep install --from-paths src --ignore-src -y -r --skip-keys="rmf_fleet_msgs ament_lint_common rclpy rclcpp rosidl_default_generators ament_cmake builtin_interfaces"
-    - name: build
-      shell: bash
-      run: |
-        cd /home/ros1_ws
-        source /opt/ros/melodic/setup.bash
-        catkin build
-
-  ros2:
+  eloquent:
     runs-on: ubuntu-18.04
     container:
       image: docker://ros:eloquent-ros-base-bionic
@@ -59,25 +19,25 @@ jobs:
     - name: workspace
       shell: bash
       run: |
-        mkdir -p /home/ros2_ws/src
-        cd /home/ros2_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros2.repos
-        vcs import src < ros2.repos
+        mkdir -p /home/ff_ws/src
+        cd /home/ff_ws
+        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/free_fleet.repos
+        vcs import src < free_fleet.repos
     - name: checkout
       shell: bash
       run: |
-        cd /home/ros2_ws/src/free_fleet
+        cd /home/ff_ws/src/free_fleet
         git checkout "${GITHUB_REF:11}"
     - name: rosdeps
       shell: bash
       run: |
-        cd /home/ros2_ws
+        cd /home/ff_ws
         rosdep update
         source /opt/ros/eloquent/setup.bash
-        rosdep install --from-paths src --ignore-src -y -r --skip-keys="actionlib tf roscpp rviz catkin map_server turtlebot3_navigation turtlebot3_bringup turtlebot3_gazebo move_base amcl"
+        rosdep install --from-paths src --ignore-src -y -r
     - name: build
       shell: bash
       run: |
-        cd /home/ros2_ws
+        cd /home/ff_ws
         source /opt/ros/eloquent/setup.bash
         colcon build
