--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -14,7 +14,25 @@ include(GNUInstallDirs)
 
 find_package(CycloneDDS REQUIRED)
 
-# -----------------------------------------------------------------------------
+#===============================================================================
+
+add_library(free_fleet SHARED
+  src/Participant.cpp
+  src/RequestPublisher.cpp
+  src/messages/message_utils.cpp
+)
+target_include_directories(free_fleet
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+target_link_libraries(free_fleet
+  CycloneDDS::ddsc
+  ssl
+  crypto
+)
+
+#===============================================================================
 
 add_library(free_fleet_client SHARED
   src/Client.cpp
@@ -35,7 +53,7 @@ target_link_libraries(free_fleet_client
   crypto
 )
 
-# -----------------------------------------------------------------------------
+#===============================================================================
 
 add_library(free_fleet_server SHARED
   src/Server.cpp
@@ -56,7 +74,7 @@ target_link_libraries(free_fleet_server
   crypto
 )
 
-# -----------------------------------------------------------------------------
+#===============================================================================
 
 set(testing_targets
   test_dds_pub_destination_request
@@ -86,10 +104,11 @@ install(
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
-# -----------------------------------------------------------------------------
+#===============================================================================
 
 # Mark executables and/or libraries for installation
 list(APPEND PACKAGE_LIBRARIES
+  free_fleet
   free_fleet_client
   free_fleet_server
 )
