--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,4 +40,5 @@ jobs:
         source /opt/ros/eloquent/setup.bash
         colcon build --packages-up-to \
           free_fleet \
-          free_fleet_server_ros2 \
+          free_fleet_server \
+          free_fleet_examples 
