--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -6,6 +6,8 @@
   <description>A package containing some examples of using free fleet components</description>
   <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
   <license>Apache License 2.0</license>
+  
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rmf_fleet_msgs</exec_depend>
